--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -54,6 +54,11 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
 
 
 	</dependencies>
